# AI-Code-Assistant-MongoDB

./: .env.example  .gitignore  LICENSE  README.md  app.py  app_run.sh  index_code.py  pyproject.toml
code_assistant/data/: chunk_data.py
code_assistant/utils/: db_opt.py  model_opt.py  utils.py
